[package]
name = "cspa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascent = { path = "../ascent" }
ascent_macro = { path = "../ascent_macro" }
ascent_base = { path = "../ascent_base" }
rand = "0.8.5"
stopwatch = "0.0.7"
bencher = "0.1.5"
derive_more = "0.99.16"
itertools = "0.12"
quote = "1.0"
arrayvec = "0.7"
const-fnv1a-hash = "1.0.1"
rayon = "1.5"
crossbeam = "0.8"
