[package]
name = "michael-ascent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascent = { path = "../ascent" }
rand = "0.8.5"
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
stopwatch = "0.0.7"
bencher = "0.1.5"
derive_more = "0.99.16"
itertools = "0.12"
quote = "1.0"
arrayvec = "0.7"
const-fnv1a-hash = "1.0.1"